--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 	"dependencies": {
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"react-icons": "^4.11.0",
 		"react-router-dom": "^6.16.0",
 		"styled-components": "^6.0.8"
 	},
@@ -34,4 +35,3 @@
 		"vite-tsconfig-paths": "^4.2.1"
 	}
 }
-
