--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"prepare": "husky install"
 	},
 	"dependencies": {
+		"dotenv": "^16.3.1",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-icons": "^4.11.0",
