--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-icons": "^4.11.0",
+		"react-leaflet": "^4.2.1",
 		"react-router-dom": "^6.16.0",
 		"styled-components": "^6.0.8"
 	},
 	"devDependencies": {
 		"@types/react": "^18.2.15",
 		"@types/react-dom": "^18.2.7",
+		"@types/react-leaflet": "^3.0.0",
 		"@types/styled-components": "^5.1.27",
 		"@typescript-eslint/eslint-plugin": "^6.7.2",
 		"@typescript-eslint/parser": "^6.7.2",
