--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 	},
 	"dependencies": {
 		"dotenv": "^16.3.1",
+		"leaflet": "^1.9.4",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-icons": "^4.11.0",
@@ -20,6 +21,7 @@
 		"styled-components": "^6.0.8"
 	},
 	"devDependencies": {
+		"@types/leaflet": "^1.9.7",
 		"@types/react": "^18.2.15",
 		"@types/react-dom": "^18.2.7",
 		"@types/react-leaflet": "^3.0.0",
