--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"version": "0.0.0",
 	"type": "module",
 	"scripts": {
-		"dev": "vite --port 42069",
+		"dev": "vite --port 42069 --host",
 		"build": "tsc && vite build",
 		"lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
 		"preview": "vite preview",
@@ -40,3 +40,4 @@
 		"vite-tsconfig-paths": "^4.2.1"
 	}
 }
+
